--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
   <html>
     <head>
 	<meta charset="utf-8" />
-  <link rel="stylesheet" href="master.css">
-  <link rel="stylesheet" href="chuck_style.css">
+  <link rel="stylesheet" href="public/css/master.css">
+  <link rel="stylesheet" href="public/css/chuck_style.css">
   <link rel="stylesheet" href="public/css/prism.css">
   <script type="text/javascript" src="chuck.js"></script>
   <link rel="icon" href="" type="image/x-icon" />
@@ -83,10 +83,10 @@
             </code>
           </div>
 
-          <div class="c#">
+          <div class="c">
             <p><b><a href="https://docs.microsoft.com/en-us/dotnet/csharp/">C#</a></b><img class="star" src="https://dumielauxepices.net/sites/default/files/stars-clipart-explosion-779070-6341730.png" width="35" height="35" alt=""><img class="star" src="https://dumielauxepices.net/sites/default/files/stars-clipart-explosion-779070-6341730.png" width="35" height="35" alt=""></p>
             <pre>
-              <code class="request c#"><a title="" href=""></a></code>
+              <code class="request c"><a title="" href=""></a></code>
               C# is a general-purpose, multi-paradigm programming language encompassing strong typing, imperative, declarative, functional, generic, object-oriented, and component-oriented programming disciplines. It was developed around 2000 by Microsoft within its .NET initiative and later approved as a standard by Ecma and ISO.
               <br>
             </pre>
