--- a/index.html
+++ b/index.html
@@ -115,6 +115,10 @@
           <h3 class="project">Tools</h3>
         <p>What's better than sharing the tools that allow me to code properly.</p>
         <pre>
+          <code class="request tools">
+            <a title="Probably the best Linux system for the web developer. I love working with this operating system. I can easily deploy applications and use the command line which is a great tool " href="https://www.ubuntu.com/">Ubuntu</a> 😍
+          </code>
+          <br>
           <code class="request tools"><a title="We provide users with a hosted environment to practice coding and to build and deploy software and web servers, made available through our Service" href="http://repl.it/">Replt.it</a></code>
           <br>
           <code class="request tools"><a title="fish is a smart and user-friendly command line shell for Linux, macOS, and the rest of the family. " href="https://fishshell.com/">fish shell</a></code>
