--- a/index.html
+++ b/index.html
@@ -87,12 +87,31 @@
             <p><b><a href="https://docs.microsoft.com/en-us/dotnet/csharp/">C#</a></b><img class="star" src="https://dumielauxepices.net/sites/default/files/stars-clipart-explosion-779070-6341730.png" width="35" height="35" alt=""><img class="star" src="https://dumielauxepices.net/sites/default/files/stars-clipart-explosion-779070-6341730.png" width="35" height="35" alt=""></p>
             <pre>
               <code class="request c"><a title="" href=""></a></code>
-              C# is a general-purpose, multi-paradigm programming language encompassing strong typing, imperative, declarative, functional, generic, object-oriented, and component-oriented programming disciplines. It was developed around 2000 by Microsoft within its .NET initiative and later approved as a standard by Ecma and ISO.
+              is a general-purpose, multi-paradigm programming language encompassing strong typing, imperative, declarative, functional, generic, object-oriented, and component-oriented programming disciplines. It was developed around 2000 by Microsoft within its .NET initiative and later approved as a standard by Ecma and ISO.
               <br>
             </pre>
             <code> <script src="https://gist.github.com/svngoku/868acf3f93f5a01897c6ae83a44c24c8.js"></script> </code>
-
           </div>
+
+          <div class="sql">
+            <p><b>SQL</b><img class="star" src="https://dumielauxepices.net/sites/default/files/stars-clipart-explosion-779070-6341730.png" width="35" height="35" alt="">
+            <img class="star" src="https://dumielauxepices.net/sites/default/files/stars-clipart-explosion-779070-6341730.png" width="35" height="35" alt="">
+            <img class="star" src="https://dumielauxepices.net/sites/default/files/stars-clipart-explosion-779070-6341730.png" width="35" height="35" alt=""></p>
+              <pre>
+              <code class="request sql">
+                <a title="Free text search." href=""></a>
+                is a domain-specific language used in programming and designed for managing data held in a relational database management system (RDBMS), or for stream processing in a relational data stream management system (RDSMS). It is particularly useful in handling structured data where there are relations between different entities/variables of the data. SQL offers two main advantages over older read/write APIs like ISAM or VSAM: first, it introduced the concept of accessing many records with one single command; and second, it eliminates the need to specify how to reach a record, e.g. with or without an index.
+                <br><br>
+                Originally based upon relational algebra and tuple relational calculus, SQL consists of many types of statements,[9] which may be informally classed as sublanguages, commonly: a data query language (DQL),[a] a data definition language (DDL),[b] a data control language (DCL), and a data manipulation language (DML).[c][10] The scope of SQL includes data query, data manipulation (insert, update and delete), data definition (schema creation and modification), and data access control. Although SQL is often described as, and to a great extent is, a declarative language (4GL), it also includes procedural elements.
+                <br><br>
+                SQL is pronounced ‘<b>sequel</b>’ and database technologies such as <b>MySQL</b>, <b>PostgreSQL</b> and <b>Microsoft SQL Server</b> power big businesses, small businesses, hospitals, banks, universities. Indeed, just about every computer and person with access to technology eventually touches something SQL. For instance, all Android phones and iPhones have access to a SQL database called SQLite and many mobile apps developed Google, Skype and DropBox use it directly.   So , I recommend it to you at 199% 😅
+              </code>
+            </pre>
+            <code>
+              <script src="https://gist.github.com/svngoku/8dc8f73e888a0cd6968b533b09be2f5a.js"></script>
+            </code>
+          </div>
+
       </section>
 
       <section>
@@ -149,6 +168,10 @@
           <br>
           <code class="request php">
             <a href="https://www.amazon.fr/Laravel-framework-efficace-d%C3%A9velopper-applications/dp/2409013783">Laravel | Un framework efficace pour developper vos applications PHP</a>
+          </code>
+          <br>
+          <code class="request sql">
+            <a title="This link is a gist containing all about MySQL" href="https://gist.github.com/hofmannsven/9164408">MySQL</a>
           </code>
         </pre>
       </section>
