--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </a>
       </p>
       <div id="detailed-description" style="display:none">
-        <p> Passionate about desktop, mobile and web application programming, I started in the system programming with <b>C</b> and <b>PHP</b>, two wonders that introduced me to the web and system development. Now I'm using <b>Laravel</b> like a framework PHP , followed by  <b>JavaScript</b> and is frameworks such as <b>Threejs</b> , <b>ReactJs</b> and  <b>NodeJs</b> to create dynamic, interactive websites ,I write in <b>Python 3</b> with <b>Flask</b> framework to create API'S , and web components  . That allow me to code responsively and intelligently. I am a developer fascinated by new technologies and all his domains .  <br> <br>
+        <p> Passionate about desktop, mobile and web application programming, I started in the system programming with <b>C</b> and <b>PHP</b>, two wonders that introduced me to the web and system development. Now I'm using <b>Laravel</b> such as php framework , followed by  <b>JavaScript</b> and is frameworks such as <b>Threejs</b> , <b>ReactJs</b> and  <b>NodeJs</b> to create dynamic, interactive websites ,I write in <b>Python 3</b> with <b>Flask</b> framework to create API'S , and web components  . That allow me to code responsively and intelligently. I am a developer fascinated by new technologies and all his domains .  <br> <br>
     A simple solution is preferable to a complex solution, on the other hand the complex solution is more of a trainer. <br> <br> </p></p>
       </div>
       </section>
