--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="wrapper">
     <header>
-      <h1><a class="hvr-buzz-out" href="/" title="Marty NIONGOLO | Svngoku"><img class="pp" alt="Personnal Profile" src="#" srcset="https://raw.githubusercontent.com/svngoku/Pyline-App/master/pp.png 720w" />
+      <h1><a class="hvr-buzz-out" href="#" title="Marty NIONGOLO | Svngoku"><img class="pp" alt="Personnal Profile" srcset="https://raw.githubusercontent.com/svngoku/Pyline-App/master/pp.png 720w" />
       </a>
     </h1>
   </header>
@@ -25,7 +25,7 @@
         </a>
       </p>
       <div id="detailed-description" style="display:none">
-        <p> Passionate about desktop, mobile and web application programming, I started in the system programming with <b>C</b> and <b>PHP</b>, two wonders that introduced me to the web and system development. Now I'm using <b>Laravel</b> such as php framework , followed by  <b>JavaScript</b> and is frameworks such as <a href="https://threejs.org/"><b>Threejs</b></a>  , <a href="https://reactjs.org/"><b>ReactJs</b></a>  and <a href="https://nodejs.org/en/"><b>NodeJs</b></a> to create dynamic, interactive websites ,I write in <b>Python 3</b> with  <a href="http://flask.pocoo.org/"><b>Flask</b></a> framework to create API'S , and web components  . That allow me to code responsively and intelligently. I am a developer fascinated by new technologies and all his domains .  
+        <p> Passionate about desktop, mobile and web application programming, I started in the system programming with <b>C</b> and <b>PHP</b>, two wonders that introduced me to the web and system development. Now I'm using <b>Laravel</b> such as php framework , followed by  <b>JavaScript</b> and is frameworks such as <a href="https://threejs.org/"><b>Threejs</b></a>  , <a href="https://reactjs.org/"><b>ReactJs</b></a>  and <a href="https://nodejs.org/en/"><b>NodeJs</b></a> to create dynamic, interactive websites ,I write in <b>Python 3</b> with  <a href="http://flask.pocoo.org/"><b>Flask</b></a> framework to create API'S , and web components  . That allow me to code responsively and intelligently. I am a developer fascinated by new technologies and all his domains .
         <br> <br>
     A simple solution is preferable to a complex solution, on the other hand the complex solution is more of a trainer. <br> <br> </p></p>
       </div>
