404 error : Bug when click on picture profile  | staus : resolved ✅

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <body>
   <div class="wrapper">
     <header>
-      <h1><a class="hvr-buzz-out" href="#" title="Marty NIONGOLO | Svngoku"><img class="pp" alt="Personnal Profile" srcset="https://raw.githubusercontent.com/svngoku/Pyline-App/master/pp.png 720w" />
+      <h1>
+        <a class="hvr-buzz-out" title="Marty NIONGOLO | Svngoku"><img class="pp" alt="Personnal Profile" srcset="https://raw.githubusercontent.com/svngoku/Pyline-App/master/pp.png 720w" />
       </a>
     </h1>
   </header>
