--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
       <small class="contribution"><b>Copyright:</b> 2019 by <a href="https://portefoliomartynio.000webhostapp.com/Portfolio/" target="_blank">Marty NIONGOLO</a></small
     </footer>
     </div>
-    </script>
-    <script type="text/javascript" src="js/channel.js">
+
+    <script type="text/javascript" src="js/channel.js"></script>
     <script type="text/javascript" src="js/prism.js">
     </script>
  </body>
