--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>3</title>
+        <title>Maintenance mode 🚧⚠🏗</title>
         <style>
             ::-moz-selection {
                 background: #b3d4fc;
