update { footer, App.js } & add { blogs, blogs components }

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/master.css">
+    <link rel="stylesheet" href="./css/blogs.css">
     <link rel="stylesheet" href="./css/chuck_style.css">
     <link rel="stylesheet" href="./css/prism.css">
     <script type="text/javascript" src="../chuck.js"></script>
