--- a/index.html
+++ b/index.html
@@ -3,175 +3,35 @@
     <head>
         <meta charset="utf-8">
         <title>Maintenance mode 🚧⚠🏗</title>
-        <style>
-            ::-moz-selection {
-                background: #b3d4fc;
-                text-shadow: none;
-            }
-
-            ::selection {
-                background: #b3d4fc;
-                text-shadow: none;
-            }
-
-            html {
-                padding: 30px 10px;
-                font-size: 20px;
-                line-height: 1.4;
-                color: #737373;
-                background: #f0f0f0;
-                -webkit-text-size-adjust: 100%;
-                -ms-text-size-adjust: 100%;
-            }
-
-            html,
-            input {
-                font-family: "Courier New", Arial, sans-serif;
-            }
-
-            body {
-                max-width: 500px;
-                _width: 500px;
-                padding: 30px 20px 50px;
-                border: 1px solid #b3b3b3;
-                border-radius: 4px;
-                margin: 0 auto;
-                box-shadow: 0 1px 10px #a7a7a7, inset 0 1px 0 #fff;
-                background: #fcfcfc;
-            }
-
-            h1 {
-                margin: 0 10px;
-                font-size: 50px;
-                text-align: center;
-            }
-
-            h1 span {
-                color: #bbb;
-            }
-
-            h3 {
-                margin: 1.5em 0 0.5em;
-            }
-
-            h4 {
-                margin: 1.5em 0 0.5em;
-                text-align: center
-            }
-
-            p {
-                margin: 1em 0;
-            }
-
-            ul {
-                padding: 0 0 0 40px;
-                margin: 1em 0;
-            }
-
-            .container {
-                max-width: 380px;
-                _width: 380px;
-                margin: 0 auto;
-            }
-
-            /* google search */
-
-            #goog-fixurl ul {
-                list-style: none;
-                padding: 0;
-                margin: 0;
-            }
-
-            #goog-fixurl form {
-                margin: 0;
-            }
-
-            #goog-wm-qt,
-            #goog-wm-sb {
-                border: 1px solid #bbb;
-                font-size: 16px;
-                line-height: normal;
-                vertical-align: top;
-                color: #444;
-                border-radius: 2px;
-            }
-
-            #goog-wm-qt {
-                width: 220px;
-                height: 20px;
-                padding: 5px;
-                margin: 5px 10px 0 0;
-                box-shadow: inset 0 1px 1px #ccc;
-            }
-
-            #goog-wm-sb {
-                display: inline-block;
-                height: 32px;
-                padding: 0 10px;
-                margin: 5px 0 0;
-                white-space: nowrap;
-                cursor: pointer;
-                background-color: #f5f5f5;
-                background-image: -webkit-linear-gradient(rgba(255,255,255,0), #f1f1f1);
-                background-image: -moz-linear-gradient(rgba(255,255,255,0), #f1f1f1);
-                background-image: -ms-linear-gradient(rgba(255,255,255,0), #f1f1f1);
-                background-image: -o-linear-gradient(rgba(255,255,255,0), #f1f1f1);
-                -webkit-appearance: none;
-                -moz-appearance: none;
-                appearance: none;
-                *overflow: visible;
-                *display: inline;
-                *zoom: 1;
-            }
-
-            #goog-wm-sb:hover,
-            #goog-wm-sb:focus {
-                border-color: #aaa;
-                box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
-                background-color: #f8f8f8;
-            }
-
-            .App-logo {
-                animation: App-logo-spin infinite 5s linear;
-                
-            }
-
-            @keyframes App-logo-spin {
-                from {
-                  transform: rotate(0deg);
-                }
-                to {
-                  transform: rotate(-360deg);
-                }
-            }
-
-            #goog-wm-qt:hover,
-            #goog-wm-qt:focus {
-                border-color: #105cb6;
-                outline: 0;
-                color: #222;
-            }
-
-            input::-moz-focus-inner {
-                padding: 0;
-                border: 0;
-            }
-        </style>
+        <link rel="stylesheet" href="./public/css/maintenance.css">
     </head>
     <body>
-        <div class="container">
-            <h1><code>🚧🏗<span></span></code></h1>
-            <h4>Désolé! Le site est actuellement en pleine maintenance.</h4>
-            <div>
-                <embed class="App-logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/512px-React-icon.svg.png" width="210" >
-                <embed class="hvr-buzz-out" src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg" width="130" >
-            </div>
-
-            <h4>💻</h4>
-            <!-- <script>
-                var GOOG_FIXURL_LANG = (navigator.language || '').slice(0,2),GOOG_FIXURL_SITE = location.host;
-            </script>
-            <script src="http://linkhelp.clients.google.com/tbproxy/lh/wm/fixurl.js"></script> -->
-        </div>
+        <div id="root"></div>
+        <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
+        <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
+        <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+        <script type="text/babel">
+            class MaintenanceMode extends React.Component {
+                constructor(props) {
+                    super(props);
+                    this.state = {
+                        message: 'Désolé! Le site est actuellement en pleine maintenance.',
+                        logos: '🚧🏗'
+                    }
+                }
+                render() {
+                    return (
+                        <div className="container">
+                            <h1><code>{this.state.logos}<span></span></code></h1>
+                            <h4>{ this.state.message }</h4>
+                            <img className="App-logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/512px-React-icon.svg.png" width="210" />
+                            <img className="hvr-buzz-out" src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg" width="125" />
+                            <h4>💻</h4>
+                        </div>
+                    ); 
+                }
+            }
+            ReactDOM.render(<MaintenanceMode />,document.getElementById('root'));
+        </script>
     </body>
 </html>
