--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" href="/assets/octocat.ico">
     <link rel="stylesheet" href="./css/master.css">
-    <link rel="stylesheet" href="./css/blogs.css">
     <link rel="stylesheet" href="./css/chuck_style.css">
     <link rel="stylesheet" href="./css/prism.css">
+    <link rel="stylesheet" href="./css/blogs.css">
+    <script src='https://embed.runkit.com'></script>
     <script type="text/javascript" src="../chuck.js"></script>
     <title>Svngoku Portfolio</title>
 </head>
