--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
     <head>
         <meta charset="utf-8">
         <title>Maintenance mode 🚧⚠🏗</title>
@@ -32,6 +32,6 @@
         </script>
     </head>
     <body>
-        <div id="root"></div>       
+        <div id="root"></div>
     </body>
 </html>
