Trying to deploy part 4

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
         not rendered
     </div>
 
-    <!-- <script src="../src/App.js"></script> -->
+    <script src="../src/App.js"></script>
     <script src="../dist/App.js"></script>
 </body>
 </html>
