--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     </div>
 
     <!-- <script src="../src/App.js"></script> -->
-    <script src="../dist/App.js"></script>
+    <script src="../dist/App.bbe341a4.js"></script>
+
 </body>
 </html>
