--- a/index.html
+++ b/index.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" href="/assets/octocat.ico">
-    <link rel="stylesheet" href="./css/master.css">
-    <link rel="stylesheet" href="./css/chuck_style.css">
-    <link rel="stylesheet" href="./css/prism.css">
-    <link rel="stylesheet" href="./css/blogs.css">
-    <script src='https://embed.runkit.com'></script>
-    <script type="text/javascript" src="../chuck.js"></script>
+    <link rel="icon" href="/octocat.dec01873.ico">
+    <link rel="stylesheet" href="/master.e2f719f2.css">
+    <link rel="stylesheet" href="/chuck_style.2c57047d.css">
+    <link rel="stylesheet" href="/prism.743dd447.css">
+    <link rel="stylesheet" href="/blogs.f65fc045.css">
+    <script src="https://embed.runkit.com"></script>
+    <script type="text/javascript" src="/chuck.dc1d8666.js"></script>
     <title>Svngoku Portfolio</title>
-</head>
+<script src="/master.e2f719f2.js"></script><script src="/chuck_style.2c57047d.js"></script><script src="/prism.743dd447.js"></script><script src="/blogs.f65fc045.js"></script></head>
 <body>
     <div id="main">
         not rendered
     </div>
 
     <!-- <script src="../src/App.js"></script> -->
-    <script src="../dist/App.bbe341a4.js"></script>
+    <script src="/App.bbe341a4.834d5184.js"></script>
+    <!-- <script src="/App.bbe341a4.js"></script> -->
 
 </body>
 </html>
