app deployed on github ✔

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
 
     <!-- <script src="../src/App.js"></script> -->
     <script src="../dist/App.bbe341a4.js"></script>
+    <!-- <script src="/App.bbe341a4.js"></script> -->
 
 </body>
 </html>
