--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,9 @@
     </div>
 
     <!-- <script src="../src/App.js"></script> -->
-    <script src="../dist/App.bbe341a4.834d5184.js"></script>
+    <!-- <script src="../dist/App.bbe341a4.834d5184.js"></script> -->
 
-    <!-- <script src="/App.bbe341a4.js"></script> -->
+    <script src="../dist/App.bbe341a4.js"></script>
 
 </body>
 </html>
