--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,8 @@
         not rendered
     </div>
 
-    <!-- <script src="../src/App.js"></script> -->
-    <script src="../dist/App.bbe341a4.js"></script>
+    <!-- <script src="../dist/App.bbe341a4.js"></script> -->
+    <script src="../src/index.js"></script>
 
 </body>
 </html>
