--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./css/blogs.css">
     <script src='https://embed.runkit.com'></script>
     <script type="text/javascript" src="../chuck.js"></script>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
     <title>Svngoku Portfolio</title>
 </head>
 <body>
@@ -19,6 +20,7 @@
     </div>
 
     <!-- <script src="../dist/App.bbe341a4.js"></script> -->
+    
     <script src="../src/index.js"></script>
 
 </body>
