--- a/index.html
+++ b/index.html
@@ -1,27 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" href="/octocat.dec01873.ico">
-    <link rel="stylesheet" href="/master.e2f719f2.css">
-    <link rel="stylesheet" href="/chuck_style.2c57047d.css">
-    <link rel="stylesheet" href="/prism.743dd447.css">
-    <link rel="stylesheet" href="/blogs.f65fc045.css">
-    <script src="https://embed.runkit.com"></script>
-    <script type="text/javascript" src="/chuck.dc1d8666.js"></script>
-    <script async="" defer="" src="https://buttons.github.io/buttons.js"></script>
-    <title>Svngoku Portfolio</title>
-<script src="/master.e2f719f2.js"></script><script src="/chuck_style.2c57047d.js"></script><script src="/prism.743dd447.js"></script><script src="/blogs.f65fc045.js"></script></head>
-<body>
-    <div id="main">
-        not rendered
-    </div>
-
-    <!-- <script src="../dist/App.bbe341a4.js"></script> -->
-    
-    <script src="/src.7ed060e2.js"></script>
-
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta http-equiv="X-UA-Compatible" content="ie=edge"><link rel="icon" href="/octocat.2001e94e.ico"><link rel="stylesheet" href="/master.c92a2d51.css"><link rel="stylesheet" href="/chuck_style.a19baee5.css"><link rel="stylesheet" href="/prism.63e77ade.css"><link rel="stylesheet" href="/blogs.379951ee.css"><script src="https://embed.runkit.com"></script><script type="text/javascript" src="/chuck.d1e5407c.js"></script><script async defer src="https://buttons.github.io/buttons.js"></script><title>Svngoku Portfolio</title></head><body> <div id="main"> not rendered </div> <script src="/src.48d9a636.js"></script> </body></html>
