--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" href="/assets/octocat.ico">
+    <link rel="icon" href="./assets/Nea_onnim_no_sua_a_ohu 2.ico">
     <link rel="stylesheet" href="./css/master.css">
     <link rel="stylesheet" href="./css/chuck_style.css">
     <link rel="stylesheet" href="./css/prism.css">
