--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,7 @@
     <link rel="icon" href="./assets/Nea_onnim_no_sua_a_ohu 2.ico">
     <link rel="stylesheet" href="./css/master.css">
     <link rel="stylesheet" href="./css/chuck_style.css">
-    <link rel="stylesheet" href="./css/prism.css">
-    <link rel="stylesheet" href="./css/blogs.css">
+    <!-- <link rel="stylesheet" href="./css/prism.css"> -->
     <script src='https://embed.runkit.com'></script>
     <script type="text/javascript" src="../chuck.js"></script>
     <script async defer src="https://buttons.github.io/buttons.js"></script>
